force-app/main/default/objects/CaseMotive__c/CaseMotive__c.object-meta.xml
<CustomObject>
    <description>[a05][CaseMotive__c] Objeto que relaciona motivo do caso o tipo de caso e perfil de visualização.</description>
    <label>Motivo do caso</label>
    <nameField>
        <label>Motivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motivos dos casos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>