force-app/main/default/objects/CaseMotive__c/fields/CaseTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeTxt__c</fullName>
    <label>Tipo de caso</label>
    <length>200</length>
    <type>Text</type>
</CustomField>