force-app/main/default/objects/CaseMotive__c/fields/ContactTxt__c.field-meta.xml
<CustomField>
    <fullName>ContactTxt__c</fullName>
    <label>Contato</label>
    <length>200</length>
    <type>Text</type>
</CustomField>