force-app/main/default/objects/CaseMotive__c/fields/NatureTxt__c.field-meta.xml
<CustomField>
    <fullName>NatureTxt__c</fullName>
    <label>Natureza</label>
    <length>200</length>
    <type>Text</type>
</CustomField>