force-app/main/default/objects/CaseMotive__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Perfil</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrador do sistema</fullName>
            </value>
            <value>
                <fullName>Analista SAC</fullName>
            </value>
            <value>
                <fullName>Coordenador SAC</fullName>
            </value>
            <value>
                <fullName>Interface Salesforce</fullName>
            </value>
            <value>
                <fullName>Analista serviços técnicos</fullName>
            </value>
            <value>
                <fullName>Analista financeiro</fullName>
            </value>
            <value>
                <fullName>Analista fiscal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>