force-app/main/default/objects/CaseMotive__c/listViews/TODOS.listView-meta.xml
<ListView>
    <fullName>TODOS</fullName>
    <columns>NatureTxt__c</columns>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>ContactTxt__c</columns>
    <columns>CaseTypeTxt__c</columns>
    <filterScope>Everything</filterScope>
    <label>TODOS</label>
</ListView>